--- a/.githu/workflows/test.yml
+++ b/.githu/workflows/test.yml
@@ -14,3 +14,5 @@ jobs :
         run : npm install
       - name : Run tests
         run : npm test
+      - name : Build
+        run : npm run build
